@@ -27,16 +27,56 @@
 
 #ifndef __ASSEMBLY__
 
+/*
+ * Assembly entries
+ */
+
 asmlinkage void divide_error(void);
 asmlinkage void debug(void);
 asmlinkage void nmi(void);
 asmlinkage void int3(void);
+asmlinkage void overflow(void);
+asmlinkage void bounds(void);
+asmlinkage void invalid_op(void);
+asmlinkage void device_not_available(void);
+asmlinkage void coprocessor_segment_overrun(void);
+asmlinkage void invalid_TSS(void);
+asmlinkage void segment_not_present(void);
+asmlinkage void stack_segment(void);
+asmlinkage void general_protection(void);
+asmlinkage void alignment_check(void);
+asmlinkage void machine_check(void);
+asmlinkage void simd_exception(void);
+asmlinkage void virtualization_exception(void);
+asmlinkage void reserved(void);
+asmlinkage void page_fault(void);
+
+/*
+ * C entries
+ */
 
 dotraplinkage void do_divide_error(struct pt_regs *, long);
+dotraplinkage void do_debug(struct pt_regs *, long);
+dotraplinkage void do_nmi(struct pt_regs *, long);
+dotraplinkage void do_int3(struct pt_regs *, long);
+dotraplinkage void do_overflow(struct pt_regs *, long);
+dotraplinkage void do_bounds(struct pt_regs *, long);
+dotraplinkage void do_invalid_op(struct pt_regs *, long);
+dotraplinkage void do_device_not_available(struct pt_regs *, long);
+dotraplinkage void do_coprocessor_segment_overrun(struct pt_regs *, long);
+dotraplinkage void do_invalid_TSS(struct pt_regs *, long);
+dotraplinkage void do_segment_not_present(struct pt_regs *, long);
+dotraplinkage void do_stack_segment(struct pt_regs *, long);
+dotraplinkage void do_general_protection(struct pt_regs *, long);
+dotraplinkage void do_alignment_check(struct pt_regs *, long);
+dotraplinkage void do_machine_check(struct pt_regs *, long);
+dotraplinkage void do_simd_exception(struct pt_regs *, long);
+dotraplinkage void do_virtualization_exception(struct pt_regs *, long);
+dotraplinkage void do_reserved(struct pt_regs *, long);
 dotraplinkage void do_page_fault(struct pt_regs *, long);
 
 /*
- * X86 Predefined Traps/Exceptions/Interrupts
+ * x86 predefined traps/exceptions/interrupts
  */
 
 enum X86_TRAPS {
