@@ -17,7 +17,7 @@
  */
 
 /*
- * Common low level (register) ptrace helpers
+ * This file describes common register-level ptrace helpers
  */
 
 #ifndef _ASM_GENERIC_PTRACE_H_
@@ -39,15 +39,12 @@ static inline unsigned long instruction_pointer(struct pt_regs *regs)
 {
 	return GET_IP(regs);
 }
+
 static inline void instruction_pointer_set(struct pt_regs *regs,
                                            unsigned long val)
 {
 	SET_IP(regs, val);
 }
-
-#ifndef profile_pc
-#define profile_pc(regs)	instruction_pointer(regs)
-#endif
 
 /*
  * Helpers for working with the user stack pointer
@@ -65,6 +62,7 @@ static inline unsigned long user_stack_pointer(struct pt_regs *regs)
 {
 	return GET_USP(regs);
 }
+
 static inline void user_stack_pointer_set(struct pt_regs *regs,
                                           unsigned long val)
 {
@@ -87,6 +85,7 @@ static inline unsigned long frame_pointer(struct pt_regs *regs)
 {
 	return GET_FP(regs);
 }
+
 static inline void frame_pointer_set(struct pt_regs *regs,
                                      unsigned long val)
 {
