@@ -472,3 +472,8 @@ Thu Feb  4 09:56:32 CST 2016
 
 Fri Feb  5 10:15:40 CST 2016
 - [M] arch/x86/entry/entry_32.S
+
+
+Tue Feb 16 09:51:28 CST 2016
+- [M] arch/x86/kernel/traps.h
+- [M] arch/x86/entry/entry_32.S
